fix spacing

--- a/src/client/styles/style-v2.scss
+++ b/src/client/styles/style-v2.scss
@@ -58,7 +58,6 @@
       margin-bottom: 1rem;
       width: 80%;
       max-width: 80%;
-      float: right;
       font-size: 0.85rem;
 
       ul {
